# j-tool

./: CMakeLists.txt  README.md  REFERENCE.md  WIKI.md  get-version-info.cmake  source.qrc  version.h.in
Markdown/: books.md  concepts.md  tools.md  websites.md  wiki.md
examples/: ffplay.c
extra/: ImageViewer.cpp
extra/multimediaplayer/: HistogramWidget.h  Player.cpp  Player.h  PlaylistModel.h  VideoWidget.cpp
include/: AddDialog.h  AddTodoItemDialog.h  AddressWidget.h  FileConverter.h  ImageBrowser.h  ImageViewer.h  MainWindow.h  NewAddressTab.h  TableModel.h  TodoList.h
resources/: source.qrc
resources/json/: info.json
resources/qss/: global.qss  multimediaPlayer.qss  style.qss
src/: AddDialog.cpp  AddTodoItemDialog.cpp  AddressWidget.cpp  FileConverter.cpp  ImageBrowser.cpp  ImageViewer.cpp  MainWindow.cpp  MainWindow.h  NewAddressTab.cpp  PDFProcessor.cpp  TableModel.cpp  TodoItem.cpp  TodoList.cpp  main.cpp
src/Calendar/: CMakeLists.txt  Calendar.cpp  Calendar.h  DigitalClock.cpp  DigitalClock.h
src/Calender/: CMakeLists.txt  Calender.cpp  Calender.h  DigitalClock.cpp
src/FormatConvertor/: CMakeLists.txt  FormatConvertor.cpp  FormatConvertor.h
src/ImageBrowser/: CMakeLists.txt  ImageBrowser.cpp  ImageBrowser.h
src/MultimediaPlayer/: AdvancedControl.cpp  AdvancedControl.h  CMakeLists.txt  CacheController.cpp  CacheController.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegFilter.cpp  FFmpegFilter.h  FFmpegFrame.cpp  FFmpegFrame.h  FFmpegRecord.cpp  FFmpegRecord.h  FFmpegRecorder.cpp  FFmpegRecorder.h  HistogramWidget.cpp  HistogramWidget.h  MediaInfoWidget.cpp  MediaInfoWidget.h  MultimediaPlayer.cpp  MultimediaPlayer.h  PlayControl.cpp  PlayControl.h  PlayListModel.cpp  PlayListModel.h  Player.cpp  Player.h  PlayerControls.cpp  PlayerControls.h  PlaylistModel.cpp  PlaylistModel.h  RecordControl.cpp  RecordControl.h  TODO.md  VideoWidget.cpp  VideoWidget.h  VideoWidgetSurface.cpp  VideoWidgetSurface.h  ffmpegFrame.h  ffmpegRecord.cpp  (+9 more)
src/MultimediaPlayer/111/: ffmpegFrame.cpp  ffmpegRecord.cpp
src/MultimediaPlayer/ffmpeg/: FFmpegFilter.h  FFmpegFrame.cpp  FFmpegFrame.h
src/MultimediaPlayer/old/: AdvancedControl.cpp  AdvancedControl.h  MultimediaPlayer.cpp  PlayControl.h  PlayListItemDelegate.cpp  PlayListItemDelegate.h  PlaylistModel.cpp  main.cpp
src/MultimediaPlayer/resources/: source.qrc
src/MultimediaPlayer/style/: index.qss
src/MultimediaPlayer/tem/: PlayListModel.cpp  PlayListModel.h
src/Network/: CMakeLists.txt  linkedlist.cpp  network.cpp  network.h  test_a.cpp  timeout_test.cpp
src/PDFProcessor/: CMakeLists.txt  PDFMain.cpp  PDFMain.h  PDFProcessor.cpp  PDFProcessor.h  PageSelector.cpp  PageSelector.h  ZoomSelector.cpp  ZoomSelector.h
src/ScreenShot/: CMakeLists.txt  ScreenShot.cpp  ScreenShot.h
src/TodoList/: AddTodoItemDialog.cpp  AddTodoItemDialog.h  CMakeLists.txt  TodoItem.cpp  TodoItem.h  TodoList.cpp  TodoList.h  source.qrc
src/TodoList/resources/: source.qrc
src/TodoList/resources/qss/: style.qss
test/: Py3-pure-embedding.cpp  hello-embedded-python.c  testlisten  testlisten.cpp  use_numpy.py
utils/: CMakeLists.txt  Message.cpp  Message.h
